añadido css para p y titulo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Excursión</title>
 </head>
 <body>
-    <h1>Descubre lugares ocultos en el mundo a tu alrededor</h1>
+    <h1 id="titulo">Descubre lugares ocultos en el mundo a tu alrededor</h1>
     <p> <a href="#">Descargar excusión... (Muy pronto!)</a> </p>
 </body>
 </html>
