--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="resources/CSS/style.css">
-    <title>Excursión</title>
-</head>
-<body>
-    <h1 id="titulo">Descubre lugares ocultos en el mundo a tu alrededor</h1>
-    <p> <a href="#">Descargar excusión... (Muy pronto!)</a> </p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="resources/CSS/style.css">
+        <title>Excursión</title>
+    </head>
+    <body>
+        <h1 id="titulo">Descubre lugares ocultos en el mundo a tu alrededor</h1>
+        <p> <a href="#">Descargar excusión... (Muy pronto!)</a> </p>
+        <video src="video/excursion.mp4" type="video/mp4" autoplay loop>  
+            Tu navegador no soporta el vídeo
+        </video>
+    </body>
 </html>
