--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
         <video src="video/excursion.mp4" type="video/mp4" autoplay loop>  
             Tu navegador no soporta el vídeo
         </video>
+        <h2>Tu guía de viaje personal</h2>
+        <h4>Excursión recuerda los lugares que te gustan y te recomienda nuevos puntos de interés</h4>
     </body>
 </html>
