--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     </head>
     <body>
         <h1 id="titulo">Descubre lugares ocultos en el mundo a tu alrededor</h1>
-        <p> <a href="#">Descargar excusión... (Muy pronto!)</a> </p>
+        <p> <a href="#">Descargar excursión... (Muy pronto!)</a> </p>
         <video src="video/excursion.mp4" type="video/mp4" autoplay loop>  
             Tu navegador no soporta el vídeo
         </video>
         <h2>Tu guía de viaje personal</h2>
-        <h4>Excursión recuerda los lugares que te gustan y te recomienda nuevos puntos de interés</h4>
+        <h4>"Excursión" recuerda los lugares que te gustan y te recomienda nuevos puntos de interés</h4>
+        <p> <img src="images/camp.jpg"></p>
+        <p> <img src="images/phone.png"></p>
+        <h2>Muy pronto para iPhone y Android</h2>
+        <p> <a href="#">Descargar excursión... (Muy pronto!)</a> </p>
     </body>
 </html>
