añadido el copyright

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
         <p> <img src="images/phone.png"></p>
         <h2>Muy pronto para iPhone y Android</h2>
         <p> <a href="#">Descargar excursión... (Muy pronto!)</a> </p>
+        <p class="copyright"> &copy;Excursion</p>
     </body>
 </html>
