fixed video issues

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1 id="titulo">Descubre lugares ocultos en el mundo a tu alrededor</h1>
         <p> <a href="#">Descargar excursión... (Muy pronto!)</a> </p>
-        <video src="video/excursion.mp4" type="video/mp4" autoplay loop>  
+        <video src="video/excursion.mp4" type="video/mp4" autoplay loop muted>  
             Tu navegador no soporta el vídeo
         </video>
         <h2>Tu guía de viaje personal</h2>
